got website basic moves working gotta aadd save/ load and make it prettier

--- a/templates/OthelloBoard.html
+++ b/templates/OthelloBoard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angelos' Othello Board</title>
+    <title>Othello Board</title>
     <style>
         .container {
             display: flex;
@@ -127,7 +127,7 @@
     </script>
 </head>
 <body>
-    <h1 style="text-align:center;">Angelos's Othello/Reversi Game</h1>
+    <h1 style="text-align:center;">Othello/Reversi Game</h1>
     <div class="container">
         <div class="board_grid">
             {% for i in range(game_board|length) %}
