--- a/templates/OthelloBoard.html
+++ b/templates/OthelloBoard.html
@@ -163,7 +163,7 @@
             });
         }
 
-        // functionality fornload button, connected to flask
+        // functionality for load button, connected to flask
         function loadGame() {
             fetch('/load')
             .then(response => response.json())
@@ -181,11 +181,7 @@
                 console.error('Error:', error);
             });
         }
-        
-        
-        
-
-         
+ 
     </script>
 </head>
 <body>
